--- a/bundles/gitea/files/app.ini
+++ b/bundles/gitea/files/app.ini
@@ -30,10 +30,10 @@ LANDING_PAGE = explore
 
 [database]
 DB_TYPE = postgres
-HOST = ${database.get('host', 'localhost')}:5432
-NAME = ${database['database']}
-USER = ${database['username']}
-PASSWD = ${database['password']}
+HOST = ${database.get('host')}:${database.get('port')}
+NAME = ${database.get('database')}
+USER = ${database.get('username')}
+PASSWD = ${database.get('password')}
 SSL_MODE = disable
 LOG_SQL = false
 
