--- a/bundles/dovecot/files/dovecot-sql.conf
+++ b/bundles/dovecot/files/dovecot-sql.conf
@@ -1,5 +1,17 @@
 connect = host=${host} dbname=${name} user=${user} password=${password}
 driver = pgsql
-default_pass_scheme = MD5-CRYPT
-password_query = SELECT username as user, password FROM mailbox WHERE username = '%u' AND active = true
-user_query = SELECT '/var/mail/vmail/' || maildir as home, 65534 as uid, 65534 as gid FROM mailbox WHERE username = '%u' AND active = true
+default_pass_scheme = PLAIN-MD5
+
+password_query = SELECT CONCAT(users.name, '@', domains.name) AS user, password\
+  FROM users \
+  LEFT JOIN domains ON users.domain_id = domains.id \
+  WHERE redirect IS NULL \
+  AND users.name = SPLIT_PART('%u', '@', 1) \
+  AND domains.name = SPLIT_PART('%u', '@', 2)
+
+user_query = SELECT CONCAT(users.name, '@', domains.name) AS user, '/var/vmail/%u' AS home \
+  FROM users \
+  LEFT JOIN domains ON users.domain_id = domains.id \
+  WHERE redirect IS NULL \
+  AND users.name = SPLIT_PART('%u', '@', 1) \
+  AND domains.name = SPLIT_PART('%u', '@', 2)
