--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -39,7 +39,6 @@ ssl_prefer_server_ciphers = yes
 
 login_greeting = IMAPd ready
 auth_mechanisms = plain login
-first_valid_uid = 65534
 disable_plaintext_auth = yes
 mail_plugins = $mail_plugins zlib
 
@@ -48,8 +47,8 @@ plugin {
    zlib_save = gz
 
    sieve_plugins = sieve_imapsieve sieve_extprograms
-   sieve_dir = /var/vmail/sieve/%d/%n/
-   sieve = /var/vmail/sieve/%d/%n.sieve
+   sieve_dir = /var/vmail/sieve/%u/
+   sieve = /var/vmail/sieve/%u.sieve
    sieve_pipe_bin_dir = /var/vmail/sieve/bin
    sieve_extensions = +vnd.dovecot.pipe
 
@@ -133,7 +132,7 @@ protocol imap {
 
 protocol sieve {
    plugin {
-       sieve = /var/vmail/sieve/%d/%n.sieve
-       sieve_storage = /var/vmail/sieve/%d/%n/
+       sieve = /var/vmail/sieve/%u.sieve
+       sieve_storage = /var/vmail/sieve/%u/
    }
 }
