--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -1,138 +1,52 @@
-!include conf.d/*.conf
+auth_mechanisms = plain login
+mail_privileged_group = mail
+ssl = required
+ssl_cert = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/fullchain.pem
+ssl_key = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/privkey.pem
+ssl_dh = </etc/dovecot/dhparam.pem
+ssl_client_ca_dir = /etc/ssl/certs
 
+mail_location = maildir:~/Maildir
 namespace inbox {
-  separator = .
-  type = private
   inbox = yes
-  location =
+  separator = .
   mailbox Drafts {
-    auto = subscribe
     special_use = \Drafts
   }
   mailbox Junk {
-    auto = create
     special_use = \Junk
-    autoexpunge = 30d
-  }
-  mailbox Sent {
-    auto = subscribe
-    special_use = \Sent
   }
   mailbox Trash {
-    auto = subscribe
     special_use = \Trash
-    autoexpunge = 360d
   }
-  prefix =
-}
-
-mail_location = maildir:/var/vmail/%u
-protocols = imap lmtp sieve
-
-ssl = yes
-ssl_cert = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/fullchain.pem
-ssl_key = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/privkey.pem
-ssl_dh = </etc/dovecot/ssl/dhparam.pem
-ssl_min_protocol = TLSv1.2
-ssl_cipher_list = EECDH+AESGCM:EDH+AESGCM
-ssl_prefer_server_ciphers = yes
-
-login_greeting = IMAPd ready
-auth_mechanisms = plain login
-disable_plaintext_auth = yes
-mail_plugins = $mail_plugins zlib
-
-plugin {
-   zlib_save_level = 6
-   zlib_save = gz
-
-   sieve_plugins = sieve_imapsieve sieve_extprograms
-   sieve_dir = /var/vmail/sieve/%u/
-   sieve = /var/vmail/sieve/%u.sieve
-   sieve_pipe_bin_dir = /var/vmail/sieve/bin
-   sieve_extensions = +vnd.dovecot.pipe
-
-   old_stats_refresh = 30 secs
-   old_stats_track_cmds = yes
-
-% if node.has_bundle('rspamd'):
-   sieve_before = /var/vmail/sieve/global/spam-global.sieve
-
-   # From elsewhere to Spam folder
-   imapsieve_mailbox1_name = Junk
-   imapsieve_mailbox1_causes = COPY
-   imapsieve_mailbox1_before = file:/var/vmail/sieve/global/learn-spam.sieve
-
-   # From Spam folder to elsewhere
-   imapsieve_mailbox2_name = *
-   imapsieve_mailbox2_from = Junk
-   imapsieve_mailbox2_causes = COPY
-   imapsieve_mailbox2_before = file:/var/vmail/sieve/global/learn-ham.sieve
-% endif
-}
-
-service auth {
-   unix_listener /var/spool/postfix/private/auth {
-       mode = 0660
-       user = postfix
-       group = postfix
-   }
-
-   unix_listener auth-userdb {
-       mode = 0660
-       user = nobody
-       group = nogroup
-   }
-}
-
-service lmtp {
-   unix_listener /var/spool/postfix/private/dovecot-lmtp {
-       group = postfix
-       mode = 0600
-       user = postfix
-   }
-}
-
-service imap {
-   executable = imap
-}
-
-service imap-login {
-   service_count = 1
-   process_min_avail = 8
-   vsz_limit = 64M
-}
-
-service managesieve-login {
-   inet_listener sieve {
-       port = 4190
-   }
-}
-
-userdb {
-   driver = sql
-   args = /etc/dovecot/dovecot-sql.conf
+  mailbox Sent {
+    special_use = \Sent
+  }
+  mailbox "Sent Messages" {
+    special_use = \Sent
+  }
 }
 
 passdb {
-   driver = sql
-   args = /etc/dovecot/dovecot-sql.conf
+  driver = sql
+  args = /etc/dovecot/dovecot-sql.conf
+}
+userdb {
+  driver = static
+  args = uid=vmail gid=vmail home=/var/vmail/%u
 }
 
-protocol lmtp {
-   mail_plugins = $mail_plugins sieve
-   postmaster_address = ${admin_email}
+service auth {
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0660
+    user = postfix
+    group = postfix
+  }
 }
-
-protocol imap {
-   mail_plugins = $mail_plugins imap_zlib imap_sieve imap_old_stats
-   mail_max_userip_connections = 50
-   imap_idle_notify_interval = 29 mins
-}
-
-protocol sieve {
-   plugin {
-       sieve = /var/vmail/sieve/%u.sieve
-       sieve_storage = /var/vmail/sieve/%u/
-   }
+service lmtp {
+  unix_listener /var/spool/postfix/private/dovecot-lmtp {
+    group = postfix
+    mode = 0600
+    user = postfix
+  }
 }
