--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -12,18 +12,19 @@ namespace inbox {
   inbox = yes
   separator = .
   mailbox Drafts {
+    auto = subscribe 
     special_use = \Drafts
   }
   mailbox Junk {
+    auto = create 
     special_use = \Junk
   }
   mailbox Trash {
+    auto = subscribe 
     special_use = \Trash
   }
   mailbox Sent {
-    special_use = \Sent
-  }
-  mailbox "Sent Messages" {
+    auto = subscribe 
     special_use = \Sent
   }
 }
