--- a/bundles/opendkim/files/opendkim.conf
+++ b/bundles/opendkim/files/opendkim.conf
@@ -4,11 +4,12 @@ Canonicalization        relaxed/simple
 KeyTable                refile:/etc/opendkim/key_table
 SigningTable            refile:/etc/opendkim/signing_table
 
-UMask                   002
+UMask                   007
 UserID                  opendkim:opendkim
-PidFile                 /var/run/opendkim/opendkim.pid
-Socket                  local:/var/run/opendkim/opendkim.sock
+PidFile                 /run/opendkim/opendkim.pid
+Socket                  inet:8891@localhost
 
 Syslog                  yes
 SyslogSuccess           Yes
+SyslogFacility          mail
 LogWhy                  Yes
