--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -52,3 +52,25 @@ service lmtp {
     group = postfix
   }
 }
+
+mail_plugins = fts fts_xapian
+
+# fulltext search
+plugin {
+    fts = xapian
+    fts_xapian = partial=3 full=20 verbose=0
+    fts_autoindex = yes
+    fts_enforced = yes
+    # Index attachements
+    fts_decoder = decode2text
+}
+service indexer-worker {
+    vsz_limit = 1G
+}
+service decode2text {
+    executable = script /usr/local/libexec/dovecot/decode2text.sh
+    user = dovecot
+    unix_listener decode2text {
+        mode = 0666
+    }
+}
