--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -1,4 +1,4 @@
-protocols = imap lmtp
+protocols = imap lmtp sieve
 auth_mechanisms = plain login
 mail_privileged_group = mail
 ssl = required
@@ -6,11 +6,12 @@ ssl_cert = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')
 ssl_key = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/privkey.pem
 ssl_dh = </etc/dovecot/dhparam.pem
 ssl_client_ca_dir = /etc/ssl/certs
-
 mail_location = maildir:~/Maildir
+mail_plugins = fts fts_xapian
+
 namespace inbox {
   inbox = yes
-  separator = .
+  separator = /
   mailbox Drafts {
     auto = subscribe 
     special_use = \Drafts
@@ -53,19 +54,42 @@ service lmtp {
   }
 }
 service stats {
-    unix_listener stats-reader {
-        user = vmail
-        group = vmail
-        mode = 0660
-    }
-    unix_listener stats-writer {
-        user = vmail
-        group = vmail
-        mode = 0660
-    }
+  unix_listener stats-reader {
+    user = vmail
+    group = vmail
+    mode = 0660
+  }
+  unix_listener stats-writer {
+    user = vmail
+    group = vmail
+    mode = 0660
+  }
+}
+service managesieve-login {
+  inet_listener sieve {
+  }
+  process_min_avail = 0
+  service_count = 1
+  vsz_limit = 64 M
+}
+service managesieve {
+  process_limit = 100
 }
 
-mail_plugins = fts fts_xapian
+protocol imap {
+   mail_plugins = $mail_plugins imap_sieve
+   mail_max_userip_connections = 50
+   imap_idle_notify_interval = 29 mins
+} 
+protocol lmtp {
+   mail_plugins = $mail_plugins sieve
+} 
+protocol sieve {
+  plugin {
+    sieve = /var/vmail/sieve/%u.sieve
+    sieve_storage = /var/vmail/sieve/%u/
+  }
+}
 
 # fulltext search
 plugin {
@@ -85,4 +109,26 @@ service decode2text {
     unix_listener decode2text {
         mode = 0666
     }
+}
+
+# spam filter
+plugin {
+  sieve_plugins = sieve_imapsieve sieve_extprograms
+  sieve_dir = /var/vmail/sieve/%u/
+  sieve = /var/vmail/sieve/%u.sieve
+  sieve_pipe_bin_dir = /var/vmail/sieve/
+  sieve_extensions = +vnd.dovecot.pipe 
+
+  sieve_before = /var/vmail/sieve/global/spam-global.sieve
+
+  # From elsewhere to Spam folder
+  imapsieve_mailbox1_name = Junk
+  imapsieve_mailbox1_causes = COPY
+  imapsieve_mailbox1_before = file:/var/vmail/sieve/global/learn-spam.sieve
+
+  # From Spam folder to elsewhere
+  imapsieve_mailbox2_name = *
+  imapsieve_mailbox2_from = Junk
+  imapsieve_mailbox2_causes = COPY
+  imapsieve_mailbox2_before = file:/var/vmail/sieve/global/learn-ham.sieve
 }
