--- a/bundles/systemd-networkd/files/resolv.conf
+++ b/bundles/systemd-networkd/files/resolv.conf
@@ -1,3 +1,3 @@
-% for nameserver in sorted(node.metadata.get('nameservers', {'9.9.9.10', '2620:fe::10'})):
+% for nameserver in sorted(node.metadata.get('nameservers')):
 nameserver ${nameserver}
 % endfor
