--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -101,7 +101,7 @@ plugin {
     fts_decoder = decode2text
 }
 service indexer-worker {
-    vsz_limit = 1G
+    vsz_limit = ${indexer_ram}
 }
 service decode2text {
     executable = script /usr/local/libexec/dovecot/decode2text.sh
