--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -6,12 +6,12 @@ ssl_cert = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')
 ssl_key = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/privkey.pem
 ssl_dh = </etc/dovecot/dhparam.pem
 ssl_client_ca_dir = /etc/ssl/certs
-mail_location = maildir:~/Maildir
+mail_location = maildir:~
 mail_plugins = fts fts_xapian
 
 namespace inbox {
   inbox = yes
-  separator = /
+  separator = .
   mailbox Drafts {
     auto = subscribe 
     special_use = \Drafts
