--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,7 @@
 
 python3 -m venv .venv
 source ./.venv/bin/activate
+
+export BW_GIT_DEPLOY_CACHE="$(realpath ~)/.cache/bw/git_deploy"
+mkdir -p "$BW_GIT_DEPLOY_CACHE"
 unset PS1
