--- a/bundles/bind/files/named.conf
+++ b/bundles/bind/files/named.conf
@@ -1,2 +1,6 @@
+statistics-channels {
+    inet 127.0.0.1 port 8053;
+};
+
 include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
