--- a/bundles/php/files/php.ini
+++ b/bundles/php/files/php.ini
@@ -12,9 +12,9 @@ ignore_user_abort = Off
 zend.enable_gc = On
 expose_php = Off
 
-max_execution_time = 30
-max_input_time = 60
-memory_limit = 256M
+max_execution_time = 300
+max_input_time = 600
+memory_limit = 1G
 
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 display_startup_errors = Off
@@ -33,14 +33,14 @@ variables_order = "GPCS"
 request_order = "GP"
 register_argc_argv = Off
 auto_globals_jit = On
-post_max_size = ${post_max_size}M
+post_max_size = ${post_max_size}
 default_mimetype = "text/html"
 default_charset = "UTF-8"
 
 enable_dl = Off
 file_uploads = On
-upload_max_filesize = ${post_max_size}M
-max_file_uploads = 20
+upload_max_filesize = ${post_max_size}
+max_file_uploads = 2000
 
 allow_url_fopen = On
 allow_url_include = Off
