--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -11,8 +11,15 @@ http {
     default_type application/octet-stream;
     error_log /var/log/nginx/error.log;
     include /etc/nginx/mime.types;
-    include /etc/nginx/sites/*;
     sendfile on;
     server_names_hash_bucket_size 128;
     tcp_nopush on;
+    
+    % if node.has_bundle('php'):
+    upstream php-handler {
+        server unix:/var/run/php/php${node.metadata.get('php/version')}-fpm.sock;
+    }
+
+    % endif
+    include /etc/nginx/sites/*;
 }
