--- a/bundles/dovecot/files/dovecot-sql.conf
+++ b/bundles/dovecot/files/dovecot-sql.conf
@@ -1,6 +1,6 @@
 connect = host=${host} dbname=${name} user=${user} password=${password}
 driver = pgsql
-default_pass_scheme = PLAIN-MD5
+default_pass_scheme = SHA512-CRYPT
 
 password_query = SELECT CONCAT(users.name, '@', domains.name) AS user, password\
   FROM users \
