--- a/bundles/gitea/files/app.ini
+++ b/bundles/gitea/files/app.ini
@@ -18,7 +18,7 @@ DOMAIN = ${domain}
 HTTP_ADDR = 0.0.0.0
 HTTP_PORT = 3500
 ROOT_URL = https://${domain}/
-DISABLE_SSH = false
+DISABLE_SSH = true
 SSH_PORT = 22
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /var/lib/gitea/data/lfs
