--- a/data/roundcube/vhost.conf
+++ b/data/roundcube/vhost.conf
@@ -5,6 +5,9 @@ server {
     server_name ${server_name};
     root ${root};
     index index.php index.html index.htm;
+    
+    ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
+    ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
     location / {
         try_files $uri $uri/ /index.php;
