--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -14,6 +14,7 @@ http {
     sendfile on;
     server_names_hash_bucket_size 128;
     tcp_nopush on;
+    client_max_body_size 32G;
     
     % if node.has_bundle('php'):
     upstream php-handler {
