--- a/bundles/opendkim/files/opendkim.conf
+++ b/bundles/opendkim/files/opendkim.conf
@@ -1,6 +1,6 @@
 Mode                    sv
 SignatureAlgorithm      rsa-sha256
-Canonicalization        relaxed/simple
+Canonicalization        relaxed/relaxed
 KeyTable                refile:/etc/opendkim/key_table
 SigningTable            refile:/etc/opendkim/signing_table
 
