--- a/bundles/rspamd/files/local.d/milter_headers.conf
+++ b/bundles/rspamd/files/local.d/milter_headers.conf
@@ -1,2 +1,4 @@
-use = ["x-spamd-bar", "x-spam-level", "authentication-results"];
+# https://rspamd.com/doc/modules/milter_headers.html
+
+use = ["x-spamd-result", "x-spamd-bar", "x-spam-level", "authentication-results"];
 authenticated_headers = ["authentication-results"];
