--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -119,7 +119,7 @@ plugin {
   sieve_pipe_bin_dir = /var/vmail/sieve/
   sieve_extensions = +vnd.dovecot.pipe 
 
-  sieve_before = /var/vmail/sieve/global/spam-global.sieve
+  sieve_after = /var/vmail/sieve/global/spam-to-folder.sieve
 
   # From elsewhere to Spam folder
   imapsieve_mailbox1_name = Junk
