--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -116,7 +116,7 @@ plugin {
   sieve_plugins = sieve_imapsieve sieve_extprograms
   sieve_dir = /var/vmail/sieve/%u/
   sieve = /var/vmail/sieve/%u.sieve
-  sieve_pipe_bin_dir = /var/vmail/sieve/
+  sieve_pipe_bin_dir = /var/vmail/sieve/bin/
   sieve_extensions = +vnd.dovecot.pipe 
 
   sieve_after = /var/vmail/sieve/global/spam-to-folder.sieve
