--- a/bundles/mosquitto/files/managed.conf
+++ b/bundles/mosquitto/files/managed.conf
@@ -1,16 +1,23 @@
 per_listener_settings true
 
 listener 1883
+password_file /etc/mosquitto/password_file
 
 listener 8883
 dhparamfile /etc/mosquitto/dhparam.pem
 certfile /etc/mosquitto/certs/cert.pem
 cafile /etc/mosquitto/certs/chain.pem
 keyfile /etc/mosquitto/certs/privkey.pem
+password_file /etc/mosquitto/password_file
 
 listener 8083
+protocol websockets
+password_file /etc/mosquitto/password_file
+
+listener 8084
 protocol websockets
 dhparamfile /etc/mosquitto/dhparam.pem
 certfile /etc/mosquitto/certs/cert.pem
 cafile /etc/mosquitto/certs/chain.pem
 keyfile /etc/mosquitto/certs/privkey.pem
+password_file /etc/mosquitto/password_file
