php prformance tweaks

--- a/bundles/php/files/php.ini
+++ b/bundles/php/files/php.ini
@@ -100,3 +100,12 @@ zend.assertions = -1
 
 [Date]
 date.timezone = Europe/London
+
+[opcache]
+opcache.enable = 1
+opcache.interned_strings_buffer = 32
+opcache.max_accelerated_files = 20000
+opcache.memory_consumption = 1024
+opcache.save_comments = 1
+opcache.validate_timestamps = 1
+opcache.revalidate_freq = 60
