--- a/data/nginx/directory_listing.conf
+++ b/data/nginx/directory_listing.conf
@@ -6,7 +6,6 @@ server {
     ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
-    location / {
-        proxy_pass ${target};
-    }
+    root ${directory};
+    autoindex on;
 }
