--- a/data/nginx/redirect.conf
+++ b/data/nginx/redirect.conf
@@ -7,4 +7,5 @@ server {
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
     return 302 ${target};
+    autoindex_exact_size off;
 }
