less greylisting, cause it interferes with 2fa codes

--- a/bundles/rspamd/files/local.d/actions.conf
+++ b/bundles/rspamd/files/local.d/actions.conf
@@ -1,3 +1,4 @@
 reject = 150;
 add_header = 2;
-greylist = 4;
+# greylisting currently makes trouble with 2fa codes coming too late
+greylist = 150;
