--- a/data/nginx/proxy_pass.conf
+++ b/data/nginx/proxy_pass.conf
@@ -7,6 +7,7 @@ server {
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
     location / {
+        proxy_set_header   X-Real-IP          $remote_addr;
         proxy_pass ${target};
     }
 }
