rspamd clamav settings

--- a/bundles/rspamd/files/override.d/antivirus.conf
+++ b/bundles/rspamd/files/override.d/antivirus.conf
@@ -2,4 +2,7 @@ clamav {
     servers = "/run/clamav/clamd.ctl";
     type = "clamav";
     symbol = "CLAM_VIRUS";
+    scan_mime_parts = true;
+    scan_text_mime = true;
+    scan_image_mime = true;
 }
