EXPERIMENTAL_UPLOAD_VIA_CAT

--- a/.envrc
+++ b/.envrc
@@ -4,5 +4,6 @@ python3 -m venv .venv
 source ./.venv/bin/activate
 
 export BW_GIT_DEPLOY_CACHE=.cache/bw/git_deploy
+export EXPERIMENTAL_UPLOAD_VIA_CAT=1
 mkdir -p "$BW_GIT_DEPLOY_CACHE"
 unset PS1
