gitea add new webhook settings

--- a/bundles/gitea/files/app.ini
+++ b/bundles/gitea/files/app.ini
@@ -86,3 +86,7 @@ JWT_SECRET = ${oauth_secret_key}
 [other]
 SHOW_FOOTER_BRANDING = true
 SHOW_FOOTER_TEMPLATE_LOAD_TIME = false
+
+[webhook]
+ALLOWED_HOST_LIST = *
+DELIVER_TIMEOUT = 600
