envrc add PATH and upgrade pip

--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,8 @@
 
 python3 -m venv .venv
 source ./.venv/bin/activate
+PATH_add .venv/bin
+python3 -m pip install --upgrade pip
 
 export BW_GIT_DEPLOY_CACHE=.cache/bw/git_deploy
 export EXPERIMENTAL_UPLOAD_VIA_CAT=1
