--- a/.envrc
+++ b/.envrc
@@ -5,6 +5,7 @@ source ./.venv/bin/activate
 PATH_add .venv/bin
 python3 -m pip install --upgrade pip
 
+rm -rf .cache/bw/git_deploy
 export BW_GIT_DEPLOY_CACHE=.cache/bw/git_deploy
 export EXPERIMENTAL_UPLOAD_VIA_CAT=1
 mkdir -p "$BW_GIT_DEPLOY_CACHE"
