reinstall home server and backups and many fixes

--- a/.envrc
+++ b/.envrc
@@ -3,6 +3,7 @@
 python3 -m venv .venv
 source ./.venv/bin/activate
 PATH_add .venv/bin
+PATH_add bin
 python3 -m pip install --upgrade pip
 
 rm -rf .cache/bw/git_deploy
