--- a/data/icingaweb2/vhost.conf
+++ b/data/icingaweb2/vhost.conf
@@ -5,10 +5,11 @@ server {
       listen [::]:443 ssl http2;
 
       server_name ${server_name};
+      root /usr/share/icingaweb2/public;
 
       ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
       ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
-      
+
       location / {
         return 302 /icingaweb2/index.php;
       }
