--- a/bundles/icinga2/files/icinga2.conf
+++ b/bundles/icinga2/files/icinga2.conf
@@ -1,4 +1,10 @@
 include "constants.conf"
-include_recursive "features.d"
+include "zones.conf"
+
+include <itl>
+include <plugins>
+include <plugins-contrib>
+
+include "features.d/*.conf"
 include_recursive "conf.d"
-include_recursive "hosts.d"
+include "hosts.d/*.conf"
