--- a/bundles/icinga2/files/constants.conf
+++ b/bundles/icinga2/files/constants.conf
@@ -2,5 +2,5 @@ const PluginDir = "/usr/lib/nagios/plugins"
 const ManubulonPluginDir = "/usr/lib/nagios/plugins"
 const PluginContribDir = "/usr/lib/nagios/plugins"
 const NodeName = "${hostname}"
-const ZoneName = "${hostname}"
+const ZoneName = NodeName
 const TicketSalt = ""
