--- a/bundles/icinga2/files/zones.conf
+++ b/bundles/icinga2/files/zones.conf
@@ -3,12 +3,5 @@ object Endpoint NodeName {
 }
 
 object Zone ZoneName {
-  endpoints = [ NodeName, "server.home.ckn.li" ]
-}
-
-
-
-# WHY?????
-object Endpoint "server.home.ckn.li" {
-  host = NodeName
+  endpoints = [ NodeName ]
 }
