--- a/bundles/icinga2/files/hosts.d/host.conf
+++ b/bundles/icinga2/files/hosts.d/host.conf
@@ -1,4 +1,6 @@
 <%!
+    from bundlewrap.utils import Fault
+
     def render_value(key, value):
         if isinstance(value, Fault):
             return render_value(key, value.value)
