--- a/bundles/icinga2/files/conf.d/commands.conf
+++ b/bundles/icinga2/files/conf.d/commands.conf
@@ -6,6 +6,18 @@
  * optional parameters.
  */
 
+
+object CheckCommand "sshmon" {
+    import "ipv4-or-ipv6"
+
+    command = [ "/usr/lib/nagios/plugins/check_by_sshmon" ]
+
+    env.SSHMON_TEST = "1234"
+    env.SSHMON_COMMAND = "$command$"
+    env.SSHMON_HOST = "$address$"
+}
+
+
 object NotificationCommand "mail-host-notification" {
   command = [ ConfigDir + "/scripts/mail-host-notification.sh" ]
 
