--- a/bundles/icinga2/files/hosts.d/host.conf
+++ b/bundles/icinga2/files/hosts.d/host.conf
@@ -28,7 +28,7 @@ object Host "${host_name}" {
   % endfor
 }
 
-% for service_name, service_config in sorted(services.items(), key=lambda e: [e[1]['vars.bundle'], e[0]]):
+% for service_name, service_config in sorted(services.items()):
 object Service "${service_name}" {
   import "generic-service"
   % for key, value in sorted(service_config.items()):
