--- a/bundles/gitea/files/app.ini
+++ b/bundles/gitea/files/app.ini
@@ -93,8 +93,7 @@ DELIVER_TIMEOUT = 600
 
 [indexer]
 REPO_INDEXER_ENABLED = true
-REPO_INDEXER_PATH = indexers/repos.bleve
-UPDATE_BUFFER_LEN = 20
 MAX_FILE_SIZE = 10240000
-REPO_INDEXER_INCLUDE =
-REPO_INDEXER_EXCLUDE = resources/bin/**
+
+[queue.issue_indexer]
+LENGTH = 20
