icinga: features.d -> features-enabled (compat with debian packages)

--- a/bundles/icinga2/files/icinga2.conf
+++ b/bundles/icinga2/files/icinga2.conf
@@ -5,6 +5,6 @@ include <itl>
 include <plugins>
 include <plugins-contrib>
 
-include "features.d/*.conf"
+include "features-enabled/*.conf"
 include_recursive "conf.d"
 include "hosts.d/*.conf"
