--- a/bundles/icinga2/files/conf.d/commands.conf
+++ b/bundles/icinga2/files/conf.d/commands.conf
@@ -12,9 +12,9 @@ object CheckCommand "sshmon" {
 
     command = [ "/usr/lib/nagios/plugins/check_by_sshmon" ]
 
-    env.SSHMON_TEST = "1234"
     env.SSHMON_COMMAND = "$command$"
     env.SSHMON_HOST = "$address$"
+    env.SSHMON_SUDO = "$sudo$"
 }
 
 
