--- a/bundles/gitea/files/app.ini
+++ b/bundles/gitea/files/app.ini
@@ -1,3 +1,4 @@
+[DEFAULT]
 APP_NAME = ckn-gitea
 RUN_USER = git
 RUN_MODE = prod
@@ -13,40 +14,24 @@ MEMBERS_PAGING_NUM = 100
 
 [server]
 PROTOCOL = http
-SSH_DOMAIN = ${domain}
-DOMAIN = ${domain}
 HTTP_ADDR = 0.0.0.0
 HTTP_PORT = 3500
-ROOT_URL = https://${domain}/
 DISABLE_SSH = true
 SSH_PORT = 22
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /var/lib/gitea/data/lfs
-LFS_JWT_SECRET = ${lfs_secret_key}
 OFFLINE_MODE = true
 START_SSH_SERVER = false
 DISABLE_ROUTER_LOG = true
 LANDING_PAGE = explore
-
-[database]
-DB_TYPE = postgres
-HOST = ${database.get('host')}:${database.get('port')}
-NAME = ${database.get('database')}
-USER = ${database.get('username')}
-PASSWD = ${database.get('password')}
-SSL_MODE = disable
-LOG_SQL = false
 
 [admin]
 DEFAULT_EMAIL_NOTIFICATIONS = onmention
 DISABLE_REGULAR_ORG_CREATION = true
 
 [security]
-INTERNAL_TOKEN = ${internal_token}
 INSTALL_LOCK = true
-SECRET_KEY = ${security_secret_key}
 LOGIN_REMEMBER_DAYS = 30
-DISABLE_GIT_HOOKS = ${str(not enable_git_hooks).lower()}
 
 [openid]
 ENABLE_OPENID_SIGNIN = false
@@ -62,12 +47,6 @@ REQUIRE_SIGNIN_VIEW = false
 DEFAULT_KEEP_EMAIL_PRIVATE = true
 DEFAULT_ALLOW_CREATE_ORGANIZATION = false
 DEFAULT_ENABLE_TIMETRACKING = true
-NO_REPLY_ADDRESS = noreply.${domain}
-
-[mailer]
-ENABLED = true
-MAILER_TYPE = sendmail
-FROM = "${app_name}" <noreply@${domain}>
 
 [session]
 PROVIDER = file
@@ -79,9 +58,6 @@ ENABLE_FEDERATED_AVATAR = false
 [log]
 MODE = console
 LEVEL = warn
-
-[oauth2]
-JWT_SECRET = ${oauth_secret_key}
 
 [other]
 SHOW_FOOTER_BRANDING = true
