--- a/bundles/samba/files/smb.conf
+++ b/bundles/samba/files/smb.conf
@@ -1,16 +1,18 @@
 [global]
-   workgroup = WORKGROUP
-   logging = syslog
-   panic action = /usr/share/samba/panic-action %d
-   server role = standalone server
-   obey pam restrictions = yes
-   unix password sync = no
-   server min protocol = SMB3
-   server smb encrypt = required
+  workgroup = WORKGROUP
+  logging = syslog
+  panic action = /usr/share/samba/panic-action %d
+  server role = standalone server
+  obey pam restrictions = yes
+  unix password sync = no
+  server min protocol = SMB3
+  server smb encrypt = required
+  local master = yes
+  preferred master = yes
 
 % for name, confs in shares.items():
 [${name}]
 % for key, value in confs.items():
-   ${key} = ${value}
+  ${key} = ${value}
 % endfor
 % endfor
