devocot optimize index

--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -13,19 +13,19 @@ namespace inbox {
   inbox = yes
   separator = .
   mailbox Drafts {
-    auto = subscribe 
+    auto = subscribe
     special_use = \Drafts
   }
   mailbox Junk {
-    auto = create 
+    auto = create
     special_use = \Junk
   }
   mailbox Trash {
-    auto = subscribe 
+    auto = subscribe
     special_use = \Trash
   }
   mailbox Sent {
-    auto = subscribe 
+    auto = subscribe
     special_use = \Sent
   }
 }
@@ -35,8 +35,8 @@ passdb {
   args = /etc/dovecot/dovecot-sql.conf
 }
 userdb {
-  driver = static
-  args = uid=vmail gid=vmail home=/var/vmail/%u
+  driver = sql
+  args = /etc/dovecot/dovecot-sql.conf
 }
 
 service auth {
@@ -80,10 +80,10 @@ protocol imap {
    mail_plugins = $mail_plugins imap_sieve
    mail_max_userip_connections = 50
    imap_idle_notify_interval = 29 mins
-} 
+}
 protocol lmtp {
    mail_plugins = $mail_plugins sieve
-} 
+}
 protocol sieve {
   plugin {
     sieve = /var/vmail/sieve/%u.sieve
@@ -117,7 +117,7 @@ plugin {
   sieve_dir = /var/vmail/sieve/%u/
   sieve = /var/vmail/sieve/%u.sieve
   sieve_pipe_bin_dir = /var/vmail/sieve/bin
-  sieve_extensions = +vnd.dovecot.pipe 
+  sieve_extensions = +vnd.dovecot.pipe
 
   sieve_after = /var/vmail/sieve/global/spam-to-folder.sieve
 
