--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -34,6 +34,7 @@ passdb {
   driver = sql
   args = /etc/dovecot/dovecot-sql.conf
 }
+# use sql for userdb too, to enable iterate_query
 userdb {
   driver = sql
   args = /etc/dovecot/dovecot-sql.conf
