change disk cache dir

--- a/.envrc
+++ b/.envrc
@@ -10,6 +10,7 @@ rm -rf .cache/bw/git_deploy
 export BW_GIT_DEPLOY_CACHE=.cache/bw/git_deploy
 mkdir -p "$BW_GIT_DEPLOY_CACHE"
 export EXPERIMENTAL_UPLOAD_VIA_CAT=1
-export BW_ITEM_WORKERS=64
-export BW_NODE_WORKERS=16
+export BW_ITEM_WORKERS=32
+export BW_NODE_WORKERS=12
+export DISK_CACHE_DIR=.cache/cache_to_disk
 unset PS1
