--- a/bundles/left4dead2/files/server.cfg
+++ b/bundles/left4dead2/files/server.cfg
@@ -4,6 +4,8 @@ sv_contact "admin@sublimity.de"
 // assign serevr to steam group
 sv_steamgroup "${','.join(steamgroups)}"
 
+rcon_password "${rcon_password}"
+
 // no annoying message of the day
 motd_enabled 0
 
