--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -2,6 +2,9 @@ pid /var/run/nginx.pid;
 user www-data;
 worker_processes 10;
 
+include /etc/nginx/modules-enabled/*;
+include /etc/nginx/conf.d/*;
+
 events {
     worker_connections 768;
 }
@@ -15,7 +18,7 @@ http {
     server_names_hash_bucket_size 128;
     tcp_nopush on;
     client_max_body_size 32G;
-    
+
     % if node.has_bundle('php'):
     upstream php-handler {
         server unix:/var/run/php/php${node.metadata.get('php/version')}-fpm.sock;
