--- a/bundles/icinga2/files/conf.d/groups.conf
+++ b/bundles/icinga2/files/conf.d/groups.conf
@@ -8,12 +8,6 @@ object HostGroup "linux-servers" {
   assign where host.vars.os == "Linux"
 }
 
-object HostGroup "windows-servers" {
-  display_name = "Windows Servers"
-
-  assign where host.vars.os == "Windows"
-}
-
 /**
  * Service group examples.
  */
@@ -34,4 +28,12 @@ object ServiceGroup "disk" {
   display_name = "Disk Checks"
 
   assign where match("disk*", service.check_command)
+}
+
+/**
+ * User group examples.
+ */
+
+object UserGroup "notifyable" {
+    display_name = "Notifyable Users"
 }
