--- a/bundles/icinga2/files/conf.d/notifications.conf
+++ b/bundles/icinga2/files/conf.d/notifications.conf
@@ -1,33 +1,13 @@
-/**
- * The example notification apply rules.
- *
- * Only applied if host/service objects have
- * the custom variable `notification` defined
- * and containing `mail` as key.
- *
- * Check `hosts.conf` for an example.
- */
+apply Notification "service-critical-mail" to Service {
+  command = "mail-service-notification"
+  user_groups = [ "notifyable" ]
 
-apply Notification "mail-icingaadmin" to Host {
-  import "mail-host-notification"
-  user_groups = host.vars.notification.mail.groups
-  users = host.vars.notification.mail.users
-
-  //interval = 2h
-
-  //vars.notification_logtosyslog = true
-
-  assign where host.vars.notification.mail
+  assign where host.vars.notification.mail != false
 }
 
-apply Notification "mail-icingaadmin" to Service {
-  import "mail-service-notification"
-  user_groups = host.vars.notification.mail.groups
-  users = host.vars.notification.mail.users
+apply Notification "service-critical-push" to Service {
+  command = "mail-service-notification"
+  users = [ "Push-Notifications" ]
 
-  //interval = 2h
-
-  //vars.notification_logtosyslog = true
-
-  assign where host.vars.notification.mail
+  assign where host.vars.notification.push != false
 }
