--- a/data/nextcloud/vhost.conf
+++ b/data/nextcloud/vhost.conf
@@ -7,7 +7,7 @@ server {
     ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
-    client_max_body_size 512M;
+    client_max_body_size 32G;
     fastcgi_buffers 64 4K;
 
     gzip on;
