envrc --require-virtualenv

--- a/.envrc
+++ b/.envrc
@@ -10,8 +10,8 @@ python3 -m venv .venv
 source .venv/bin/activate
 PATH_add .venv/bin
 PATH_add bin
-python3 -m pip install --upgrade pip wheel
-python3 -m pip install --upgrade -r requirements.txt
+python3 -m pip --require-virtualenv --quiet install --upgrade pip wheel
+python3 -m pip --require-virtualenv --quiet install --upgrade -r requirements.txt
 
 rm -rf .cache/bw/git_deploy
 export BW_GIT_DEPLOY_CACHE=.cache/bw/git_deploy
