--- a/data/icingaweb2/vhost.conf
+++ b/data/icingaweb2/vhost.conf
@@ -20,7 +20,7 @@ server {
     }
 
     location ~ ^/icingaweb2/index\.php(.*)$ {
-        fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+        fastcgi_pass unix:/run/php/php${php_version}-fpm.sock;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /usr/share/icingaweb2/public/index.php;
