nginx: more managed, hopefully survives updates

--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -2,7 +2,10 @@ pid /var/run/nginx.pid;
 user www-data;
 worker_processes 10;
 
-include /etc/nginx/modules-enabled/*;
+% for module in sorted(modules):
+load_module modules/ngx_${module}_module.so;
+% endfor
+
 include /etc/nginx/conf.d/*;
 
 events {
