--- a/data/mailserver-autodiscover/vhost.conf
+++ b/data/mailserver-autodiscover/vhost.conf
@@ -7,10 +7,10 @@ server {
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
     root ${root};
-    
+
     location ~ /(?:a|A)utodiscover/(?:a|A)utodiscover.xml {
         try_files /autodiscover/autodiscover.php =404;
         fastcgi_pass php-handler;
-        include fastcgi.conf;
+        include params/fastcgi;
     }
 }
