--- a/data/roundcube/vhost.conf
+++ b/data/roundcube/vhost.conf
@@ -1,11 +1,11 @@
 server {
     listen 443      ssl http2;
     listen [::]:443 ssl http2;
-    
+
     server_name ${server_name};
     root ${root};
     index index.php index.html index.htm;
-    
+
     ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
@@ -25,9 +25,9 @@ server {
         fastcgi_pass php-handler;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        include params/fastcgi;
     }
-    
+
     location ~* \.(jpg|jpeg|gif|png|webp|svg|woff|woff2|ttf|css|js|ico|xml)$ {
         access_log        off;
         log_not_found     off;
