--- a/data/icingaweb2/vhost.conf
+++ b/data/icingaweb2/vhost.conf
@@ -22,7 +22,7 @@ server {
     location ~ ^/icingaweb2/index\.php(.*)$ {
         fastcgi_pass unix:/run/php/php${php_version}-fpm.sock;
         fastcgi_index index.php;
-        include fastcgi_params;
+        include params/fastcgi;
         fastcgi_param SCRIPT_FILENAME /usr/share/icingaweb2/public/index.php;
         fastcgi_param ICINGAWEB_CONFIGDIR /etc/icingaweb2;
         fastcgi_param REMOTE_USER $remote_user;
