--- a/data/nextcloud/vhost.conf
+++ b/data/nextcloud/vhost.conf
@@ -131,7 +131,7 @@ server {
 
         try_files $fastcgi_script_name =404;
 
-        include fastcgi_params;
+        include params/fastcgi;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $path_info;
         fastcgi_param HTTPS on;
