--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
+PATH_add bin
+
 source_env ~/.local/share/direnv/pyenv
 source_env ~/.local/share/direnv/venv
 source_env ~/.local/share/direnv/bundlewrap
