--- a/data/wordpress/vhost.conf
+++ b/data/wordpress/vhost.conf
@@ -1,8 +1,14 @@
 # Upstream to abstract backend connection(s) for php
 server {
+    listen 443      ssl http2;
+    listen [::]:443 ssl http2;
+
     server_name ${server_name};
     root ${root};
     index index.php;
+
+    ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
+    ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
     location = /favicon.ico {
         log_not_found off;
