nginx fix ssl_dhparam path

--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -21,7 +21,7 @@ http {
     server_names_hash_bucket_size 128;
     tcp_nopush on;
     client_max_body_size 32G;
-    ssl_dhparam "/etc/nginx/dhparams.pem";
+    ssl_dhparam "/etc/ssl/certs/dhparam.pem";
 
     % if node.has_bundle('php'):
     upstream php-handler {
