--- a/bundles/nginx/files/nginx.conf
+++ b/bundles/nginx/files/nginx.conf
@@ -1,6 +1,6 @@
 pid /var/run/nginx.pid;
 user www-data;
-worker_processes 10;
+worker_processes ${worker_processes};
 
 % for module in sorted(modules):
 load_module modules/ngx_${module}_module.so;
@@ -22,6 +22,8 @@ http {
     tcp_nopush on;
     client_max_body_size 32G;
     ssl_dhparam "/etc/ssl/certs/dhparam.pem";
+    # dont show nginx version
+    server_tokens off;
 
     % if node.has_bundle('php'):
     upstream php-handler {
