nodes/mseibert.yourls.py: introduce

--- a/bundles/systemd-networkd/files/resolv.conf
+++ b/bundles/systemd-networkd/files/resolv.conf
@@ -1,3 +1,10 @@
-% for nameserver in sorted(node.metadata.get('nameservers')):
+<%
+    nameservers = (
+        node.metadata.get('overwrite_nameservers', []) or
+        node.metadata.get('nameservers', [])
+    )
+%>\
+\
+% for nameserver in nameservers:
 nameserver ${nameserver}
 % endfor
