--- a/bundles/mailman/files/mailman.cfg
+++ b/bundles/mailman/files/mailman.cfg
@@ -217,7 +217,7 @@ path: mailman.log
 
 [webservice]
 # The hostname at which admin web service resources are exposed.
-hostname: ${hostname}
+hostname: localhost
 
 # The port at which the admin web service resources are exposed.
 port: 8001
