--- a/bundles/mailman/files/mailman.cfg
+++ b/bundles/mailman/files/mailman.cfg
@@ -256,7 +256,7 @@ outgoing: mailman.mta.deliver.deliver
 # smtp_pass: ${smtp_password}
 # smtp_secure_mode: starttls
 
-smtp_host: localhost
+smtp_host: 127.0.0.1
 smtp_port: 25
 smtp_user:
 smtp_pass:
