--- a/data/icingaweb2/vhost.conf
+++ b/data/icingaweb2/vhost.conf
@@ -10,13 +10,8 @@ server {
     ssl_certificate /var/lib/dehydrated/certs/${server_name}/fullchain.pem;
     ssl_certificate_key /var/lib/dehydrated/certs/${server_name}/privkey.pem;
 
-    location /api/ {
-        proxy_pass https://127.0.0.1:5665/;
-        proxy_http_version 1.1;
-    }
-
-    location / {
-        return 302 /icingaweb2/index.php;
+    location = / {
+        return 302 /icingaweb2/;
     }
 
     location ~ ^/icingaweb2/index\.php(.*)$ {
@@ -32,5 +27,10 @@ server {
         alias /usr/share/icingaweb2/public;
         index index.php;
         try_files $1 $uri $uri/ /icingaweb2/index.php$is_args$args;
+    }
+
+    location /api/ {
+        proxy_pass https://127.0.0.1:5665/;
+        proxy_http_version 1.1;
     }
 }
