--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -1,12 +1,17 @@
+dovecot_config_version = ${config_version}
+dovecot_storage_version = ${storage_version}
+
 protocols = imap lmtp sieve
 auth_mechanisms = plain login
 mail_privileged_group = mail
 ssl = required
-ssl_cert = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/fullchain.pem
-ssl_key = </var/lib/dehydrated/certs/${node.metadata.get('mailserver/hostname')}/privkey.pem
-ssl_dh = </etc/dovecot/dhparam.pem
+ssl_server_cert_file = /var/lib/dehydrated/certs/${hostname}/fullchain.pem
+ssl_server_key_file = /var/lib/dehydrated/certs/${hostname}/privkey.pem
+ssl_server_dh_file = /etc/dovecot/dhparam.pem
 ssl_client_ca_dir = /etc/ssl/certs
-mail_location = maildir:${node.metadata.get('mailserver/maildir')}/%u:INDEX=${node.metadata.get('mailserver/maildir')}/index/%u
+mail_driver     = maildir
+mail_path       = ${maildir}/%{user}
+mail_index_path = ${maildir}/index/%{user}
 mail_plugins = fts fts_xapian
 
 namespace inbox {
@@ -30,14 +35,47 @@ namespace inbox {
   }
 }
 
-passdb {
-  driver = sql
-  args = /etc/dovecot/dovecot-sql.conf
+
+sql_driver = pgsql
+
+pgsql main {
+  parameters {
+    host     = ${db_host}
+    dbname   = ${db_name}
+    user     = ${db_user}
+    password = ${db_password}
+  }
 }
-# use sql for userdb too, to enable iterate_query
-userdb {
-  driver = sql
-  args = /etc/dovecot/dovecot-sql.conf
+
+# postgres passdb userdb
+
+passdb sql {
+  passdb_default_password_scheme = ARGON2ID
+
+  query = SELECT \
+            CONCAT(users.name, '@', domains.name) AS "user", \
+            password \
+          FROM users \
+          LEFT JOIN domains ON users.domain_id = domains.id \
+          WHERE redirect IS NULL \
+            AND users.name   = SPLIT_PART('%{user}', '@', 1) \
+            AND domains.name = SPLIT_PART('%{user}', '@', 2)
+}
+
+mail_uid = vmail
+mail_gid = vmail
+
+userdb sql {
+  query = SELECT \
+            '/var/vmail/%{user}' AS home, \
+            'vmail'              AS uid, \
+            'vmail'              AS gid
+
+  iterate_query = SELECT \
+                    CONCAT(users.name, '@', domains.name) AS username \
+                  FROM users \
+                  LEFT JOIN domains ON users.domain_id = domains.id \
+                  WHERE redirect IS NULL
 }
 
 service auth {
@@ -70,7 +108,8 @@ service managesieve-login {
   inet_listener sieve {
   }
   process_min_avail = 0
-  service_count = 1
+  process_min_avail = 1
+  process_limit = 1
   vsz_limit = 64 M
 }
 service managesieve {
@@ -86,21 +125,18 @@ protocol lmtp {
    mail_plugins = $mail_plugins sieve
 }
 protocol sieve {
-  plugin {
-    sieve = /var/vmail/sieve/%u.sieve
-    sieve_storage = /var/vmail/sieve/%u/
-  }
+  sieve = /var/vmail/sieve/%u.sieve
+  sieve_storage = /var/vmail/sieve/%u/
 }
 
 # fulltext search
-plugin {
-    fts = xapian
-    fts_xapian = partial=3 full=20 verbose=0
-    fts_autoindex = yes
-    fts_enforced = yes
-    # Index attachements
-    fts_decoder = decode2text
-}
+fts = xapian
+fts_xapian = partial=3 full=20 verbose=0
+fts_autoindex = yes
+fts_enforced = yes
+# Index attachements
+fts_decoder = decode2text
+
 service indexer-worker {
     vsz_limit = ${indexer_ram}
 }
@@ -113,23 +149,21 @@ service decode2text {
 }
 
 # spam filter
-plugin {
-  sieve_plugins = sieve_imapsieve sieve_extprograms
-  sieve_dir = /var/vmail/sieve/%u/
-  sieve = /var/vmail/sieve/%u.sieve
-  sieve_pipe_bin_dir = /var/vmail/sieve/bin
-  sieve_extensions = +vnd.dovecot.pipe
+sieve_plugins = sieve_imapsieve sieve_extprograms
+sieve_dir = /var/vmail/sieve/%u/
+sieve = /var/vmail/sieve/%u.sieve
+sieve_pipe_bin_dir = /var/vmail/sieve/bin
+sieve_extensions = +vnd.dovecot.pipe
 
-  sieve_after = /var/vmail/sieve/global/spam-to-folder.sieve
+sieve_after = /var/vmail/sieve/global/spam-to-folder.sieve
 
-  # From elsewhere to Spam folder
-  imapsieve_mailbox1_name = Junk
-  imapsieve_mailbox1_causes = COPY
-  imapsieve_mailbox1_before = file:/var/vmail/sieve/global/learn-spam.sieve
+# From elsewhere to Spam folder
+imapsieve_mailbox1_name = Junk
+imapsieve_mailbox1_causes = COPY
+imapsieve_mailbox1_before = file:/var/vmail/sieve/global/learn-spam.sieve
 
-  # From Spam folder to elsewhere
-  imapsieve_mailbox2_name = *
-  imapsieve_mailbox2_from = Junk
-  imapsieve_mailbox2_causes = COPY
-  imapsieve_mailbox2_before = file:/var/vmail/sieve/global/learn-ham.sieve
-}
+# From Spam folder to elsewhere
+imapsieve_mailbox2_name = *
+imapsieve_mailbox2_from = Junk
+imapsieve_mailbox2_causes = COPY
+imapsieve_mailbox2_before = file:/var/vmail/sieve/global/learn-ham.sieve
